Bug 152082 - Converting .xlsx to .ods does not correctly convert chosen filtering options
Summary: Converting .xlsx to .ods does not correctly convert chosen filtering options
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2022-11-17 10:48 UTC by assk
Modified: 2023-01-24 10:36 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of error (74.15 KB, image/png)
2022-11-17 10:51 UTC, assk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description assk 2022-11-17 10:48:07 UTC
Description:
I have an .xlsx spreadsheet with chosen filtering options in effect.
When I use LibreOffice to convert this .xlsx to .ods the data still looks fine.
When I the close the .ods and reopen the ods. in LibreOffice, the chosen filtering options are no longer correct.

Steps to Reproduce:
1. Convert .xlsx with filtering options selceted to ods.
2. Reopen .ods and open filtering options on the same column. Selected filtering options are no longer correct.
3.

Actual Results:
Selected filtering options are incorrect after converting .xlsx to .ods using LibreOffice for conversion and viewing.

Expected Results:
Same selected filtering options should be present between .xlsx to .ods conversion and viewing.


Reproducible: Always


User Profile Reset: No

Additional Info:
You can download example spreadsheets with this error from this Google Drive folder: https://drive.google.com/drive/folders/1PdGT8bTrGT-fBLqk8r1L7wruTrFnicrp?usp=sharing
Comment 1 assk 2022-11-17 10:51:03 UTC
Created attachment 183640 [details]
Screenshot of error
Comment 2 Roman Kuznetsov 2022-11-17 19:28:09 UTC
Confirm the problem in

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ddb8a1a282aae74c1cee3a5e1f446abd0c00b116
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

and in

Version: 7.2.0.4 (x86) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

but not in

Version: 7.1.0.3 (x86) / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

regression
Comment 3 Roman Kuznetsov 2022-11-20 09:23:16 UTC
I bisected this one in win64-7.2 bisect repo and got

https://git.libreoffice.org/core/commit/3069df790cca2917e5aedd87bac1af65f9605d51

https://gerrit.libreoffice.org/c/core/+/118593

Added to CC: Xisco Fauli and Balazs Varga
Comment 4 Aron Budea 2022-11-21 02:16:27 UTC
(In reply to Roman Kuznetsov from comment #3)
> I bisected this one in win64-7.2 bisect repo and got
> 
> https://git.libreoffice.org/core/commit/
> 3069df790cca2917e5aedd87bac1af65f9605d51
That's a backport from 7.3, let's add the original as well. Also, same commit as identified in bug 151152.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=f6b143a57d9bd8f5d7b29febcb4e01ee1eb2ff1d
author		Balazs Varga <balazs.varga991@gmail.com>	2021-07-02 09:40:32 +0200
committer	László Németh <nemeth@numbertext.org>	2021-07-07 17:44:46 +0200

tdf#142910 sc filter: fix "greater than" or "smaller than" etc
Comment 5 Gabor Kelemen (Collabora) 2022-11-25 11:24:43 UTC
@NISZ team maybe one for you?
Comment 6 Commit Notification 2022-12-19 10:38:58 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f30f9cf012cee6823029ef5a96a1d91a0e16cdc

tdf#152082 ODS: fix import of Empty filter operator

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-12-19 15:55:05 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2f01443e84e6dc81a41c5a09da13cb8abfc6d534

tdf#152082 ODS: fix import of Empty filter operator

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-12-20 07:52:02 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f6728e75f814bfc4df533469ff7d90601de490e6

tdf#152082 ODS: fix import of Empty filter operator

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 NISZ LibreOffice Team 2022-12-21 09:05:15 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d948d5c7edbbfd29a77b97a5101aa43917e5ec2
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 10 Xisco Faulí 2023-01-24 10:36:21 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard