tdf#152082 ODS: fix import of Empty filter operator

Bad import of the Empty filter operator resulted shifted
filter settings, e.g. selected "A" and "B" instead of
"empty" and "A" from the range "empty", "A" and "B".

Regression from commit f6b143a57d9bd8f5d7b29febcb4e01ee1eb2ff1d
"tdf#142910 sc filter: fix "greater than" or "smaller than" etc".

Change-Id: I33082d77fb9e707aa474fb22753a001960341d66
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143776
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 1f30f9cf012cee6823029ef5a96a1d91a0e16cdc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144476
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>